Update 'pa8lgdv5o-go' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-aef9660775.1r9a.p3.openshiftapps.com/rhtap/rhtap-qe:995bdc0f0b30a76bca4e398abb302d206452b0c7@sha256:65e7a092d2087b9fe1fa2a5bfcb5f16c5ea8e15eca86fe197cf33a7fda7e9933

--- a/components/pa8lgdv5o-go/overlays/development/deployment-patch.yaml
+++ b/components/pa8lgdv5o-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: pa8lgdv5o-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-aef9660775.1r9a.p3.openshiftapps.com/rhtap/rhtap-qe:995bdc0f0b30a76bca4e398abb302d206452b0c7@sha256:65e7a092d2087b9fe1fa2a5bfcb5f16c5ea8e15eca86fe197cf33a7fda7e9933
+          name: container-image
